# cookiecutter-project

./: DEPENDENCIES.md  README.md  cookiecutter.json  pyproject.toml
{{cookiecutter.project_slug}}/: .gitignore  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/python/src/{{cookiecutter.project_slug}}/: __init__.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/python/tests/: test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/spec/: bash_spec.sh  code_spec.sh  python_spec.sh  {{cookiecutter.project_slug}}_spec.sh
