[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">=3"
dependencies = [
  "typer>=0.0.1",
]

[dependency-groups]
dev = [
  "mypy>=0.720"    ,
  "pytest>=4.6.11" ,
  "ruff>=0.0.17"   ,
]

[tool.ruff]
indent-width = 2

[tool.ruff.lint]
select = ["ALL"]
ignore = [
"D203"   , # Incorrect blank line before class (incompatible with D211)
"D213"   , # Incompatible with D212
"EXE003" , # Checks for Python shebang but we are using bash wrapper
"TD"     , # 'To Do' rules are too extreme
"FIX002" , # 'To Do' checks already done at shellspec level
]

[tool.ruff.lint.per-file-ignores]
"python/tests/*" = [
"S101" , # Assert calls in test files are OK
]


